<resources>
    <string name="app_name">AboutDogs</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="anecdot1">На уроке биологии учительница спрашивает: \n — Вовочка, назови пожалуйста, пять домашних животных\n  — Две кошки и три собаки!</string>
    <string name="anecdot2">— Ты на дачу в эти выходные поедешь \n — А как же! У меня там жена, дети, теща, собака..\n — И у меня тоже теща — собака!</string>
    <string name="anecdot3">Вопрос армянскому радио: — Как жене следует обращаться с мужем \n Ответ:  — Как с собакой: регулярно кормить, ласкать, отпускать гулять</string>
    <string name="anecdot4">— Фу! Кто это там воет, как собака? \n — Это я, мама. \n — А, это ты... Ну пой, пой, мой соловушка...</string>
    <string name="anecdot5">Объявление на улице:   Пропала собака бойцовской породы.\n Люди добрые, кто её встретит, я не виноват!</string>
    <string name="anecdot6">Во дворе психбольницы прогуливается больной, волоча за собой на веревке консервную банку.\n К нему подходит доктор: — Ты что делаешь? \n — А вы что, не видите? Выгуливаю собаку.\n — Надень ей немедленно намордник!</string>
    <string name="anecdot7">— Скажите, у вас, наверное, очень тесная квартира? \n— Да, действительно! Но как вы догадались? \n — Ваша собака машет хвостом не сбоку на бок, а сверху вниз</string>
    <string name="anecdot8">Знаете, что больше всего бесит? Укус собаки, зараженной бешенством!</string>
    <string name="sign1">Хорошую охоту обещает весёлая и добрая охотничья собака. Резвое настроение, активный бег и прыжки – гарантия хорошей добычи.</string>
    <string name="sign2">Хорошая примета, если за вами на улице увязался чужой пёс.</string>
    <string name="sign3">Если вы увидели во сне лающую собаку – ожидайте незваных гостей.</string>
    <string name="sign4">Заметили активно играющих собак? Возможно, в вашем доме скоро состоится свадебное торжество.</string>
    <string name="sign5">Неожиданная встреча сразу трёх белых собак обещает вам неимоверное везение и удачу.</string>
    <string name="sign6">Если в доме кто-то болеет, предложите собаке съесть бутерброд, в середину которого нужно положить несколько волос болеющего. Больной выздоравливал, а собака забирала на себя его болезнь. Очень часто такой способ использовался для избавления детей от кори, коклюша и подобных заболеваний. </string>
    <string name="sign7">Для тех, кто боится молнии, стоит завести чёрную собаку. Такой питомец считается оберегом от попадания молнии в дом или в человека. </string>
    <string name="sign8">Плохой приметой считается собака на рыбалке. Примета распространена у морских рыбаков, одни просто не произносят слово «собака» на борту, а другие даже не допускают животное на борт (в том числе и на берег) – рыбу распугает!</string>
    <string name="sign9">Отправляясь в дальнюю дорогу, постарайтесь взять с собой питомца, собака поможет сделать поездку безопасной, лёгкой и интересной.</string>
    <string name="quotes1">Если собака – это все, что у тебя есть, ты все равно богатый человек. (Л. Сабин)</string>
    <string name="quotes2">Отправляясь в дальнюю дорогу, постарайтесь взять с собой питомца, собака поможет сделать поездку безопасной, лёгкой и интересной.</string>
    <string name="quotes3">Благоговение – чувство, испытываемое человеком к Богу и собакой к человеку. (Амброс Бирз)</string>
    <string name="quotes4">В отличие от людей, собаки никогда не притворяются: друзей они любят, а врагов кусают. (Джайлз Роулэнд)</string>
    <string name="quotes5">Кошка полна тайны, как зверь, собака проста и наивна, как человек. (Карел Чапек)</string>
    <string name="quotes6">Если у вас есть собака, то вы возвращаетесь не в дом, а домой. (Неизвестный автор)</string>
    <string name="quotes7">В сущности, у собак определенно есть то, что мы называем душой. (Р. Амундсен)</string>
    <string name="quotes8">По твоему отношению к собаке я узнаю, что ты за человек. (А. Боссе)</string>
    <string name="quotes9">Человеку свойственно ошибаться, собаке – прощать. (Неизвестный автор)</string>
    <string name="quotes10">Только человек, у которого есть собака, чувствует себя человеком. («Пшекруй»)</string>
    <string name="habit1">Облизывает руки или лицо</string>
    <string name="habit2">Грызет обувь</string>
    <string name="habit3">Спит на спине</string>
    <string name="habit4">Роет землю для того, чтобы спрятаться от хищника или спрятать кости или трофеи</string>
    <string name="habit5">Считает еду или игрушки своей собственностью, если только не научить собаку с раннего возраста не зариться на предметы, принадлежащие тем, кто находится на более высокой иерархической ступени</string>
    <string name="habit6">Сгоняет птиц или кроликов во время охоты и преследовать их, если нет ограничения свободы собаки</string>
    <string name="habit7">Подпрыгивает, чтобы поприветствовать знакомых людей и при этом пытаться достать до лица</string>
    <string name="habit8">Валяется в неприятных, сильно пахнущих веществах.</string>
    <string name="habit9">Лижет морды собак и пытаеться лизать лицо и руки у человека. Это признак подчиненности и привязанности. Щенки лижут морду своей матери, чтобы спровоцировать ее срыгнуть для них пищу</string>
    <string name="habit10">Чувствует себя в одиночестве и воет для привлечения внимания</string>
    <string name="O_dog1">Вот где собака зарыта!\n Вот в чём суть дела заключается.</string>
    <string name="O_dog2">Соба́ка (лат. Canis lupus familiaris) — домашнее животное, одно из наиболее популярных (наряду с кошкой)
        животных-компаньонов.\n Первоначально домашняя собака была выделена в отдельный биологический вид (лат. Canis familiaris)
        Линнеем в 1758 году, в 1993 году реклассифицирована Смитсоновским институтом и Американской ассоциацией териологов в подвид волка
        (Canis lupus)[2]. В русскоязычных письменных источниках слово «собака» в значении соответствующего животного встречается
        по крайней мере с 1475 года (начиная с грамоты князя Андрея Васильевича Меньшого Кириллову монастырю).\n
С зоологической точки зрения, собака — плацентарное млекопитающее отряда хищных семейства псовых.
        \n Собаки известны своими способностями к обучению, любовью к игре, социальным поведением.
        Выведены специальные породы собак, предназначенные для различных целей: охоты, охраны, тяги гужевого транспорта и другого
        , а также декоративные породы (например, болонка, пудель).
        \n При необходимости разграничения по полу употребляются термины «кобе́ль» (самец) и «су́ка» (самка);
        в обиходной речи — «пёс» и «собака» соответственно. Детёныши собаки называются щенками или кутятами.</string>
    <string name="o_dog3">Имеется несколько гипотез происхождения собаки, наиболее вероятными её
        предками считаются волк и некоторые виды шакалов.В суждениях учёных о предках домашней собаки
        присутствуют две точки зрения. Одни считают, что собаки — полифилетическая группа (происходящая от нескольких предков),
        другие придерживаются мнения, что все собаки произошли от одного предка (монофилетическая теория)[5][неавторитетный источник?].
        Этолог Конрад Лоренц, лауреат Нобелевской премии, выдвинул в своё время теорию о происхождении собак от волков и от шакалов[6],
        подчёркивая диаметральные различия между их характерами и повадками.
        На происхождение собаки от волка указывают комплексные результаты сравнительного анализа хромосом,
        поведения, морфологии, вокализации и результаты молекулярно-генетического анализа[7].</string>
    <string name="funny_images">Смешные собаки</string>
    <string name="habit">Привычки</string>
    <string name="quotes">Цитаты</string>
    <string name="anecdots">Анекдоты</string>
    <string name="dog">Собака это?</string>
    <string name="signs">Приметы</string>
    <string name="book_about_dog">Справочник \nо собаках</string>
    <string name="treni1">Аттестация прикладных собак</string>
    <string name="treni">Виды \nдрессировок</string>
    <string name="treni2">Общий курс дрессировки</string>
    <string name="treni3">Защитно-караульная служба</string>
    <string name="treni4">Караульная служба</string>
    <string name="treni5"> Поисково-спасательная служба</string>
    <string name="treni6">Русский ринг. Большой ринг</string>
    <string name="treni7">Конвойная служба</string>
    <string name="treni8">Патрульно-постовая, патрульно-дозорная служба</string>
    <string name="treni9">Сторожевая служба</string>
    <string name="treni10">Минно-разыскная служба</string>
    <string name="treni11">Поиск взрывчатых и наркотических веществ</string>
    <string name="treni12">Собака-поводырь</string>
    <string name="treni13">Собака-спасатель</string>
</resources>