<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/grey"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".FragmentTrenirovki">
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">

        <TextView
            android:id="@+id/tvTreni1"
            android:text="@string/treni1"
            style="@style/style_tv"
            android:backgroundTint="@color/orange_black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>
        <TextView
            android:id="@+id/tvTreni2"
            android:text="@string/treni2"
            style="@style/style_tv"
            android:backgroundTint="@color/green_lite"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvTreni1"/>
        <TextView
            android:id="@+id/tvTreni3"
            android:text="@string/treni3"
            style="@style/style_tv"
            android:backgroundTint="@color/yellow"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvTreni2"/>

        <TextView
            android:id="@+id/tvTreni4"
            android:text="@string/treni4"
            style="@style/style_tv"
            android:backgroundTint="@color/birus"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvTreni3"/>
        <TextView
            android:id="@+id/tvTreni5"
            android:text="@string/treni5"
            style="@style/style_tv"
            android:backgroundTint="@color/purple_200"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvTreni4"/>

        <TextView
            android:id="@+id/tvTreni6"
            android:text="@string/treni6"
            style="@style/style_tv"
            android:backgroundTint="@color/orange_black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvTreni5"/>
        <TextView
            android:id="@+id/tvTreni7"
            android:text="@string/treni7"
            style="@style/style_tv"
            android:backgroundTint="@color/green_lite"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvTreni6"/>
        <TextView
            android:id="@+id/tvTreni8"
            android:text="@string/treni8"
            style="@style/style_tv"
            android:backgroundTint="@color/yellow"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvTreni7"/>
        <TextView
            android:id="@+id/tvTreni9"
            android:text="@string/treni9"
            style="@style/style_tv"
            android:backgroundTint="@color/birus"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvTreni8"/>
        <TextView
            android:id="@+id/tvTreni10"
            android:text="@string/treni10"
            style="@style/style_tv"
            android:backgroundTint="@color/teal_700"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvTreni9"/>
        <TextView
            android:id="@+id/tvTreni11"
            android:text="@string/treni11"
            style="@style/style_tv"
            android:backgroundTint="@color/orange_black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvTreni10"/>
        <TextView
            android:id="@+id/tvTreni12"
            android:text="@string/treni12"
            style="@style/style_tv"
            android:backgroundTint="@color/green_lite"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvTreni11"/>
</androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>