<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".FragmentQuotes">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/grey">

        <TextView
            android:id="@+id/tvTreni1"
            android:text="@string/quotes1"
            style="@style/style_tv"
            android:backgroundTint="@color/orange_black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>
        <TextView
            android:id="@+id/tvTreni2"
            android:text="@string/quotes2"
            style="@style/style_tv"
            android:backgroundTint="@color/green_lite"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvTreni1"/>
        <TextView
            android:id="@+id/tvTreni3"
            android:text="@string/quotes3"
            style="@style/style_tv"
            android:backgroundTint="@color/yellow"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvTreni2"/>

        <TextView
            android:id="@+id/tvTreni4"
            android:text="@string/quotes4"
            style="@style/style_tv"
            android:backgroundTint="@color/birus"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvTreni3"/>
        <TextView
            android:id="@+id/tvTreni5"
            android:text="@string/quotes5"
            style="@style/style_tv"
            android:backgroundTint="@color/purple_200"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvTreni4"/>

        <TextView
            android:id="@+id/tvTreni6"
            android:text="@string/quotes6"
            style="@style/style_tv"
            android:backgroundTint="@color/teal_700"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvTreni5"/>
        <TextView
            android:id="@+id/tvHabbit7"
            android:text="@string/quotes7"
            style="@style/style_tv"
            android:backgroundTint="@color/green"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvTreni6"/>
        <TextView
            android:id="@+id/tvHabit8"
            android:text="@string/quotes8"
            style="@style/style_tv"
            android:backgroundTint="@color/yellow"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvHabbit7"/>
        <TextView
            android:id="@+id/tvHabit9"
            android:text="@string/quotes9"
            style="@style/style_tv"
            android:backgroundTint="@color/birus"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvHabit8"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>